--- a/source/stylesheets/article.css
+++ b/source/stylesheets/article.css
@@ -218,7 +218,7 @@
 	padding: 10px 20px;
     color: #333;
     font-size: 15px; 
-    height: 40px;
+    min-height: 40px;
     background-color: #f5f5f5;
     border-bottom: 2px solid #DCDDD9;
 }
