--- a/views/other/yct.ejs
+++ b/views/other/yct.ejs
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="/images/favicon.ico">    
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-<script src="/javascripts/jquery-min.js"></script>   
+<script src="/javascripts/lib/jquery.min.js"></script>   
 
  <style type="text/css">
  @charset"utf-8";
